--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+
+hsptmp
+obj
+.exe
+
+
 # Logs
 logs
 *.log
@@ -44,39 +50,15 @@ jspm_packages/
 # TypeScript v1 declaration files
 typings/
 
-# TypeScript cache
-*.tsbuildinfo
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
 # Microbundle cache
 .rpt2_cache/
 .rts2_cache_cjs/
 .rts2_cache_es/
 .rts2_cache_umd/
 
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
 # dotenv environment variables file
 .env
 .env.test
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-
-# Next.js build output
-.next
 
 # Nuxt.js build / generate output
 .nuxt
@@ -91,14 +73,4 @@ dist
 # vuepress build output
 .vuepress/dist
 
-# Serverless directories
-.serverless/
 
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
